2003-12-26  Christopher Faylor  <cgf@redhat.com>

	* Makefile.in (CFLAGS, CXXFLAGS): Remove unneeded include.
	(CYGWIN_LIB): Delete.
	(cygserver.exe target): Add -L$(cygwin_build) to the link line to force
	linker to use build tree version of the library.  Remove specific
	inclusion of libcygwin.a from the link line.

2003-12-16  Corinna Vinschen  <corinna@vinschen.de>

	* bsd_helper.cc (tunable_params): Add entries for kern.ipc.msgmnb and
	kern.ipc.msgtql.  Raise max value for kern.ipc.msgseg to 65535.
	* cygserver.conf: Add kern.ipc.msgmnb and kern.ipc.msgtql.
	* sysv_msg.cc (msginit): Add TUNABLE_INT_FETCH call for
	kern.ipc.msgmnb and kern.ipc.msgtql.

2003-11-26  Corinna Vinschen  <corinna@vinschen.de>

	* cygserver.cc (main): Move call to ipcinit() up before installing
	any threads.
	* sysv_sem.cc: Update to FreeBSD version 1.67.
	(seminit): Initialize semaphore sequence numbers to 0.

2003-11-26  Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in (CYGWIN_LIB): Variable pointing to libcygwin.a in
	the parallel cygwin dir.
	(cygserver.exe): Depend on and link against $CYGWIN_LIB.

2003-11-25  Christopher Faylor  <cgf@redhat.com>

	* Makefile.in (CXXFLAGS): Remove duplicate options handled in
	Makefile.common.

2003-11-22  Corinna Vinschen  <corinna@vinschen.de>

	* msg.cc (client_request_msg::serve): Add default case to msgop switch.
	* sem.cc (client_request_sem::serve): Add default case to semop switch.
	* shm.cc (client_request_shm::serve): Add default case to shmop switch.

2003-11-21  Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in (install): Explicitely create directories.  Install
	README to $(prefix)/share/doc/Cygwin.
	* README: New file.

2003-11-21  Corinna Vinschen  <corinna@vinschen.de>

	* cygserver.cc (print_usage): Fix scrambled output.

2003-11-20  Corinna Vinschen  <corinna@vinschen.de>

	* cygserver-config: Slightly modify printed message.

2003-11-20  Corinna Vinschen  <corinna@vinschen.de>
